# auto-cpp-rewriter

./: README.md
convert/: CMakeLists.txt  Config.cpp  Config.h  Convert.cpp  ConvertAction.cpp  ConvertAction.h  Deleter.cpp  Deleter.h  Env.cpp  Env.h  ExprInfo.cpp  ExprInfo.h  ExprParser.cpp  ExprParser.h  ExprParserBSField.cpp  ExprParserBSField.h  ExprParserDetail.cpp  ExprParserDetail.h  LogicParser.cpp  LogicParser.h  README.md  Tool.cpp  Tool.h  Traits.h  Type.h  bs_field.py
convert/expr_parser/: ExprParserQueryToken.cpp  ExprParserQueryToken.h
convert/handler/: AdlogFieldHandler.cpp  AdlogFieldHandler.h  BSFieldHandler.cpp  BSFieldHandler.h  FieldDeclHandler.cpp  FieldDeclHandler.h  LazyReplace.h  LogicHandler.cpp  LogicHandler.h  OverviewHandler.cpp  OverviewHandler.h  README.md  RewriteAction.h  StrictRewriter.cpp  StrictRewriter.h
convert/info/: ActionDetailFixedInfo.cpp  ActionDetailFixedInfo.h  ActionDetailInfo.cpp  ActionDetailInfo.h  ActionMethodInfo.cpp  ActionMethodInfo.h  AdlogFieldInfo.h  AssignInfo.h  BSFieldInfo.cpp  BSFieldInfo.h  BinaryOpInfo.cpp  BinaryOpInfo.h  CommonInfo.cpp  CommonInfo.h  CommonInfoBodyText.cpp  CommonInfoBodyText.h  CommonInfoCore.cpp  CommonInfoCore.h  CommonInfoDetail.cpp  CommonInfoDetail.h  CommonInfoFixed.cpp  CommonInfoFixed.h  CommonInfoFixedList.cpp  CommonInfoFixedList.h  CommonInfoLeaf.cpp  CommonInfoLeaf.h  CommonInfoMiddleNode.cpp  CommonInfoMiddleNode.h  CommonInfoMultiIntList.cpp  CommonInfoMultiIntList.h  CommonInfoMultiMap.h  CommonInfoNormal.cpp  CommonInfoNormal.h  CommonInfoPrepare.cpp  CommonInfoPrepare.h  ConstructorInfo.cpp  ConstructorInfo.h  DeclInfo.h  FeatureInfo.cpp  FeatureInfo.h  (+25 more)
convert/matcher_callback/: BSFeatureDeclCallback.cpp  BSFeatureDeclCallback.h  BSTypeAliasCallback.cpp  BSTypeAliasCallback.h  FeatureDeclCallback.cpp  FeatureDeclCallback.h  InferFilterCallback.cpp  InferFilterCallback.h  TypeAliasCallback.cpp  TypeAliasCallback.h
convert/proto_parser/: BUILD  proto_node.cc  proto_node.h  proto_parser.cc  proto_parser.h  util.h
convert/rule/: ActionDetailRule.cpp  ActionDetailRule.h  AddFeatureMethodRule.cpp  AddFeatureMethodRule.h  BSFieldOrderRule.cpp  BSFieldOrderRule.h  CommonInfoRule.cpp  CommonInfoRule.h  DoubleListRule.cpp  DoubleListRule.h  GeneralRule.cpp  GeneralRule.h  HashFnRule.cpp  HashFnRule.h  MiddleNodeRule.cpp  MiddleNodeRule.h  PreRule.cpp  PreRule.h  ProtoListRule.cpp  ProtoListRule.h  QueryTokenRule.cpp  QueryTokenRule.h  README.md  RuleBase.cpp  RuleBase.h  SeqListRule.cpp  SeqListRule.h  StrRule.cpp  StrRule.h
convert/visitor/: BSCtorVisitor.cpp  BSCtorVisitor.h  BSExtractMethodVisitor.cpp  BSExtractMethodVisitor.h  CtorVisitor.cpp  CtorVisitor.h  ExtractMethodVisitor.cpp  ExtractMethodVisitor.h  FieldDeclVisitor.cpp  FieldDeclVisitor.h  (+2 more)
(+41 files in other folders)
